Refactor editor (#43)
* - add Connectable interface
- implement the interface in Button
- add getTilesInConnectableCategory and objectToConnectable, also rename methods to fit with multiple enums scheme
- implement the Connectable interface in ChasingEnemy
- move the getConnections method from editor to interface
- edit LegacyConnectionEvents handling to include the new interface methods

* - add handling of ConnectableTileSelectedEvent
- change ConnectionCreated/Deleted event handling from Legacy to new version

* Palette demo

* Path prototype

* Fix path resizing

* Update enemy graphics

* Fix bug when resizing map

* Update graphics

* Add skeleton for Connections Palette

* Add a tree for tiles the other tiles are connected to, ad a list for tiles which are connecting to a specified tile, add graphics to tree, and functionality of selecting different tiles and removing them from the list

* Delete old placeholder code

* Basic new raw map

* Split editor into three files

---------

Co-authored-by: emithedum <emilia@kosior.pl>
Co-authored-by: Hashibane [Jacek Jeczeń] <280473@student.pwr.edu.pl>
Co-authored-by: Tysek64 <tysek2004@gmail.com>
Co-authored-by: zeolsem <141428776+zeolsem@users.noreply.github.com>
Co-authored-by: zeolsem <zsolim@proton.me>